# rust-snake

./: Cargo.toml  README.md  index.html
src/: lib.rs  snake.rs
