[package]
name = "rust-snake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3.57"
features = [
    "Window", "console", "Document", "Element", "HtmlElement",
    "CssStyleDeclaration", "HtmlDivElement", "KeyboardEvent"
]
